--- a/src/app/styles/ClanClashRoyale.module.css
+++ b/src/app/styles/ClanClashRoyale.module.css
@@ -13,3 +13,21 @@
   margin-bottom: var(--mantine-spacing-lg);
   border: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
+
+.floating-publish-button {
+  font-weight: bold;
+  font-size: 14px;
+  padding: 6px 12px;
+}
+
+
+/* Posiciones posibles */
+.top-left {
+  top: 60px;
+  left: 20px;
+}
+
+.bottom-right {
+  bottom: 20px;
+  right: 20px;
+}
