--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: #EAF4FF;
   --foreground: #171717;
 }
 
@@ -8,7 +8,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color-scheme: light;
-  background: white;
+  background: var(--background);
   color: black;
 }
 
